--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,32 @@ plugins/ios.json
 www/
 $RECYCLE.BIN/
 .history/
+.idea/
 
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 UserInterfaceState.xcuserstate
