--- a/Front/autostop/package.json
+++ b/Front/autostop/package.json
@@ -27,7 +27,7 @@
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.4",
     "cordova-browser": "5.0.4",
-    "cordova-ios": "4.4.0",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-googlemaps": "^2.4.6",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
