--- a/Front/autostop/package.json
+++ b/Front/autostop/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "^4.17.0",
+    "@ionic-native/email-composer": "^4.18.0",
     "@ionic-native/google-maps": "^4.15.1",
     "@ionic-native/splash-screen": "^4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
@@ -29,8 +30,8 @@
     "cordova-android": "7.1.4",
     "cordova-browser": "5.0.4",
     "cordova-ios": "^4.5.5",
-    "cordova-plugin-browsersync": "^1.1.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-email": "^1.2.7",
     "cordova-plugin-googlemaps": "^2.4.6",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.5",
@@ -60,7 +61,9 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-email": {},
+      "cordova-plugin-email-composer": {}
     },
     "platforms": [
       "browser",
