--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/Autostop
 spring.datasource.username = test
-spring.datasource.password = test
+spring.datasource.password = testtest
 
 spring.jpa.hibernate.ddl-auto=update
 
