--- a/Front/autostop/package.json
+++ b/Front/autostop/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "^4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
     "@ionic/storage": "2.2.0",
+    "@types/node": "^10.12.18",
     "browse": "0.4.0",
     "cordova-android": "7.1.4",
     "cordova-browser": "5.0.4",
@@ -38,6 +39,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "decode-google-map-polyline": "^1.0.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
