--- a/Front/autostop/package.json
+++ b/Front/autostop/package.json
@@ -42,6 +42,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "decode-google-map-polyline": "^1.0.1",
+    "emulator": "0.1.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
