--- a/Front/autostop/package.json
+++ b/Front/autostop/package.json
@@ -31,6 +31,7 @@
     "bowser": "2.0.0-beta.3",
     "browse": "0.4.0",
     "cordova-android": "^7.1.0",
+    "cordova-android-support-gradle-release": "^2.0.1",
     "cordova-browser": "5.0.4",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-device": "^2.0.2",
@@ -69,7 +70,10 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-email": {},
-      "cordova-plugin-email-composer": {}
+      "cordova-plugin-email-composer": {},
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "27.+"
+      }
     },
     "platforms": [
       "browser",
