--- a/back/pom.xml
+++ b/back/pom.xml
@@ -85,10 +85,17 @@
 			<artifactId>google-maps-services</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		
+		<dependency> 
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-log4j12</artifactId>
+		    <version>1.8.0-beta2</version>
+		</dependency>
+		
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.25</version>
+			 <groupId>com.google.code.gson</groupId>
+			 <artifactId>gson</artifactId>
+			 <version>2.8.5</version>
 		</dependency>
 
 	</dependencies>
