--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 ## MULTIPART (MultipartProperties)
-# Enable multipart uploads
+## Enable multipart uploads
 spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
 spring.servlet.multipart.file-size-threshold=2KB
